--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -676,7 +676,7 @@ footer.sticky-bottom {
   }
 
   h2.bibliography {
-    color: var(--global-theme-color);
+    color: var(--global-text-color);
     border-top: 1px solid $grey-color-light;
     padding-top: 1rem;
     margin-top: 2rem;
